--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+* {
+	color: #191917 !important;
+}
+
+h3.white, h2.white {
+	color: white !important;
+}
+
+.white-text h2 {
+	color: white !important;
+}
+
 section span {
 	font-size: .9em !important;
 }
@@ -10,10 +22,11 @@ section span {
 	margin: 0;
 	padding: 0;
 	font-size: 300px;
-	color: #303030 !important;
+	color: #505050 !important;
 }
 
 .hello h4, .hello h2 {
+	text-transform: capitalize;
 	color: white !important;
 }
 
@@ -28,37 +41,6 @@ p.center {
 
 p.big {
 	font-size: 1.5em;
-}
-
-.quote p {
-	padding-right: 150px;
-	text-align: right;
-	font-size: 25px;
-}
-
-.quote h4 {
-	margin: 0 auto;
-	width: 70%;
-	font-weight: 400;
-	position: relative;
-}
-
-.quote h4:after,
-.quote h4:before {
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	font-size: 150px;
-}
-
-.quote h4:before {
-	right: 100%;
-	content: '«';
-}
-
-.quote h4:after {
-	left: 100%;
-	content: '»';
 }
 
 .chaos span {
